# RelayInformer

./: README.md
Python/: .gitignore  pyproject.toml
Python/relayinformer/: __main__.py  logger.py
Python/relayinformer/commands/: __init__.py  http.py  ldap.py  mssql.py
Python/relayinformer/informers/: HttpInformer.py  LdapInformer.py  MssqlInformer.py  __init__.py
Python/relayinformer/lib/: MssqlExtended.py
